dummysite_manifests/example_ds/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ds-svc
  namespace: dummy
spec:
  type: ClusterIP
  selector:
    app: ds
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
