dummysite_manifests/example_ds/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ds-ingress
  namespace: dummy
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ds-svc
          servicePort: 80
